--- a/zenplan-backend/package.json
+++ b/zenplan-backend/package.json
@@ -9,9 +9,14 @@
   "dependencies": {
     "@hono/node-server": "^1.14.1",
     "@prisma/client": "^6.8.2",
-    "hono": "^4.7.10"
+    "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
+    "hono": "^4.7.10",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.11.17",
     "prisma": "^6.8.2",
     "tsx": "^4.7.1",
