--- a/zenplan-frontend/package.json
+++ b/zenplan-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +20,7 @@
     "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-router": "^7.6.0",
     "react-router-dom": "^6.30.1",
     "tailwind-merge": "^3.3.0",
