--- a/zenplan-frontend/package.json
+++ b/zenplan-frontend/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@tailwindcss/vite": "^4.1.7",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "i": "^0.3.7",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "i": "^0.3.7",
     "lucide-react": "^0.511.0",
     "npm": "^11.4.1",
     "react": "^19.1.0",
