--- a/zenplan-frontend/package.json
+++ b/zenplan-frontend/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "i": "^0.3.7",
     "lucide-react": "^0.511.0",
+    "next-themes": "^0.4.6",
     "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "zod": "^3.25.23"
